Added: - Data Providers folder - Router configuration - Login and SignUp Components - Home Components - Configure styles - Importing folders standard - Other configurations

--- a/src/main.sass
+++ b/src/main.sass
@@ -1,12 +1,16 @@
-@import 'themes/reset'
-@import 'themes/custom-theme'
-@import 'themes/fonts'
+@import 'reset'
+@import 'custom-theme'
+@import 'fonts'
+@import 'forms'
+@import 'layouts'
+@import 'positioning'
 
 
 html, body
   height: 100%
 
 body
-  font: 100% $font-stack
+  font: 100% $font-family--stack
   overflow-x: hidden
   overflow-y: auto
+
