--- a/src/themes/_fonts.sass
+++ b/src/themes/_fonts.sass
@@ -1,4 +1,4 @@
-$font-stack: Roboto, Regular, sans-serif
-$font-title: Antenna, Light, sans-serif
-$paragraph-font: Antenna, Book, sans-serif
-$icons--font-family: FontAwesome, sans-serif
+$font-family--stack: Roboto, Regular, sans-serif
+$font-family--title: Antenna, Light, sans-serif
+$font-family--paragraph: Antenna, Book, sans-serif
+$font-family--icons: FontAwesome, sans-serif
