--- a/src/themes/_layouts.sass
+++ b/src/themes/_layouts.sass
@@ -1,9 +1,9 @@
-%full-window-coverage
+.full-size
   height: 100%
   width: 100%
 
 %flex-container
-  @extend %full-window-coverage
+  @extend .full-size
   align-items: center
   display: flex
   justify-content: center
