--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<mat-card [class.dark-theme]="darkTheme">
-  <button mat-raised-button (click)="darkTheme = !darkTheme" color="primary">Toggle Theme</button>
-  <mat-list [ngClass]="{'dark-theme': darkTheme}">
-    <mat-list-item *ngFor="let msg of messages">{{ msg }}</mat-list-item>
-  </mat-list>
-</mat-card>
+<router-outlet></router-outlet>
